--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -1512,9 +1512,11 @@ class GCDMMIOBlackBox(val w: Int)
 
   <section class="center">
     <h2>Semantics Preserving</h2>
-    <div class="container" style="grid-template-columns: 1.4fr 1.0fr;">
+    <div class="container" style="grid-template-columns: 1.4fr 0.1fr 1.0fr;">
     <div class="r-stack">
       <img style="object-fit: contain;" class="image fragment" src="./figs/latte24/new-paradigm-common-ir.svg" />
+    </div>
+    <div>
     </div>
     <div>
       <ul>
