--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -1560,7 +1560,7 @@ class GCDMMIOBlackBox(val w: Int)
   <section class="center">
     <h2>Conclusion</h2>
     <ul>
-      <li class="fragment">We need to radically change the hardware design methodology</li>
+      <li class="fragment">We need to radically change the hardware design methodology in order to achieve higher PPA</li>
       <li class="fragment">By tightly integrating the tools vertically, we can achieve low iteration time, high design productivity and high QoR</li>
     </ul>
   </section>
